# aura-chain

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
constants/: currency.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  main.rs  rpc.rs  service.rs
pallets/aura-identity/: Cargo.toml
pallets/aura-identity/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: setup.sh
