[workspace]
members = [
    "node",
    "pallets/aura-identity", 
    "runtime",
]
resolver = "2"

[workspace.dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
scale-info = { version = "2.6", default-features = false }

# АГРЕССИВНЫЙ PATCH - принудительно используем одну версию
[patch.crates-io]
schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", rev = "5f6c28db6f058fe195d2c6f7c6c6e3e4e25bf80b" }
substrate-bip39 = { git = "https://github.com/paritytech/substrate-bip39.git", branch = "master" }

# Принудительно заменяем все вхождения schnorrkel
[patch."https://github.com/paritytech/substrate.git"]
schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", rev = "5f6c28db6f058fe195d2c6f7c6c6e3e4e25bf80b" }
