[package]
name = "aura-chain-node"
version = "0.1.0"
description = "Aura Chain Node"
authors = ["Aura OS Team"]
edition = "2021"

[[bin]]
name = "aura-chain-node"
path = "src/main.rs"

[dependencies]
aura-chain-runtime = { path = "../runtime", default-features = false }

# Substrate
sc-cli = { version = "0.10.0", features = ["wasmtime"] }
sc-client-api = { version = "4.0.0" }
sc-consensus = { version = "0.10.0" }
sc-consensus-aura = { version = "0.10.0" }
sc-executor = { version = "0.10.0" }
sc-network = { version = "0.10.0" }
sc-service = { version = "0.10.0" }
sc-telemetry = { version = "4.0.0" }
sc-transaction-pool = { version = "4.0.0" }

frame-benchmarking = { version = "4.0.0", optional = true }
frame-system = { version = "4.0.0" }
frame-system-rpc-runtime-api = { version = "4.0.0" }

pallet-aura-identity = { path = "../pallets/aura-identity" }
pallet-balances = { version = "4.0.0" }
pallet-transaction-payment = { version = "4.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0" }

sp-application-crypto = { version = "4.0.0" }
sp-consensus = { version = "0.10.0" }
sp-consensus-aura = { version = "0.10.0" }
sp-core = { version = "4.0.0" }
sp-io = { version = "4.0.0" }
sp-keyring = { version = "4.0.0" }
sp-runtime = { version = "4.0.0" }

# Networking and RPC
libp2p = { version = "0.42.0", features = ["tcp-tokio"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"

# Other
futures = "0.3.0"
log = "0.4.0"
structopt = "0.3.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "aura-chain-runtime/runtime-benchmarks",
    "frame-benchmarking",
]
std = [
    "aura-chain-runtime/std",
    "sc-cli/std",
    "sc-client-api/std",
    "sc-consensus/std",
    "sc-consensus-aura/std",
    "sc-executor/std",
    "sc-network/std",
    "sc-service/std",
    "sc-telemetry/std",
    "sc-transaction-pool/std",
    "frame-benchmarking/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura-identity/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-application-crypto/std",
    "sp-consensus/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keyring/std",
    "sp-runtime/std",
]
try-runtime = [
    "aura-chain-runtime/try-runtime",
    "sc-service/try-runtime",
]
