[package]
name = "aura-chain-runtime"
version = "0.1.0"
edition = "2021"
description = "Aura Chain Runtime"
authors = ["Aura OS Team"]

[lib]
name = "aura_chain_runtime"
path = "src/lib.rs"

[dependencies]
pallet-aura-identity = { path = "../pallets/aura-identity", default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "pallet-aura-identity/std",
    "sp-runtime/std",
]
