[package]
name = "aura-chain-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Существующие зависимости...
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
scale-info = { workspace = true }

# Добавляем явные зависимости
pallet-aura-identity = { path = "../pallets/aura-identity", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# Принудительно патчим schnorrkel
[patch.crates-io]
schnorrkel = { git = "https://github.com/w3f/schnorrkel.git", branch = "master" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std", 
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
    "pallet-aura-identity/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-sudo/std",
    "sp-consensus-aura/std",
    "pallet-grandpa/std",
]
